# QForms

./: .gitignore  README.md  awards.ipynb  awards.yaml  bank.yaml  example.yaml  pyproject.toml  qf.py  qforms  qforms.md  todo  torneio.yaml
antigo/: alunosjj.py  qf.py
antigo/exFlask/: teste.py
exFlask/: qforms  teste.py  torneio.yaml
examples/: ex1.qformsBS
qforms/: .cabula.swp  __init__.py  readme.md
